# Entiti

./: CMakeLists.txt  main.cpp
include/: BaseSystem.h  Component.h  Entiti.h  Handle.h  Manager.h  Misc.h  System.h
src/: BaseSystem.cpp  Handle.cpp  Manager.cpp  Misc.cpp
